[project]
name = "dsa-python"
version = "0.1.0"
description = "Data Structures, Algorithms and Solution to problems in python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.3",
    "asttokens==2.2.1",
    "backcall==0.2.0",
    "decorator==5.1.1",
    "executing==1.2.0",
    "ipython==8.14.0",
    "jedi==0.18.2",
    "jinja2==3.1.2",
    "jsonpickle==3.0.1",
    "markupsafe==2.1.3",
    "matplotlib-inline==0.1.6",
    "networkx==3.1",
    "numpy>=1.24.3",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "prompt-toolkit==3.0.38",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pygments==2.15.1",
    "pyvis==0.3.1",
    "setuptools>=80.9.0",
    "six==1.16.0",
    "stack-data==0.6.2",
    "termcolor==2.3.0",
    "traitlets==5.9.0",
    "typing-extensions==4.6.3",
    "wcwidth==0.2.6",
]
